endgame route
