# swagger/swagger.yaml
@@ -268,3 +268,49 @@ paths:
           description: Invalid form data
         '500':
           description: Internal Server Error
+  /api/public/game/{idGame}/endgame:
+    put:
+      summary: End the game
+      security: []   # No security
+      tags:
+        - games
+      parameters:
+        - name: idGame
+          in: path
+          description: game ID
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        description: the differents victory
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                victory:
+                  type: boolean
+                  example: true
+                victoryObjectif:
+                  type: boolean
+                  example: true
+                victoryPlayers:
+                  type: array
+                  example:
+                    - 5
+                    - 4
+                    - 2
+                    - 3
+                    - 7
+                  items:
+                    type: integer
+      responses:
+        '201':
+          description: action successfully doned
+        '404':
+          description: Game does not exist
+        '422':
+          description: Invalid form data
+        '500':
+          description: Internal Server Error
